# SimpleSQL

./: CMakeLists.txt
include/SimpleSQL/: SimpleSQL.h  SimpleSQL_result.h  SimpleSQL_tokens.h
tests/: CMakeLists.txt  test_basics.cc
